[gd_scene load_steps=2 format=3 uid="uid://c7hiulouvftkd"]

[ext_resource type="Script" path="res://scenes/prototypes/clicker/prototype_clicker.gd" id="1_4qrmq"]

[node name="PrototypeClicker" type="Control" node_paths=PackedStringArray("label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4qrmq")
label = NodePath("Label")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(160, 80)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -283.0
offset_top = 1.0
offset_bottom = 81.0
grow_horizontal = 0
theme_type_variation = &"HeaderLarge"
text = "Money : <value>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(160, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -108.0
offset_right = 116.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
text = "Make Coffee"

[node name="Upgrade" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -45.0
offset_right = -30.0
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
text = "Upgrade : <value>"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="Upgrade" to="." method="_on_button_2_pressed"]
